source/common/main/default/objects/Track__c/fields/Key_Takeaways__c.field-meta.xml
<CustomField>
    <fullName>Key_Takeaways__c</fullName>
    <label>Key Takeaways</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>