source/common/main/default/objects/Track__c/fields/Publish_to_Web__c.field-meta.xml
<CustomField>
    <fullName>Publish_to_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish to Web?</label>
    <type>Checkbox</type>
</CustomField>