source/common/main/default/objects/Track__c/fields/Track_Description__c.field-meta.xml
<CustomField>
    <fullName>Track_Description__c</fullName>
    <label>Track Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>