source/common/main/default/objects/Track__c/fields/Track_Status__c.field-meta.xml
<CustomField>
    <fullName>Track_Status__c</fullName>
    <label>Track Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>